--- a/src/components/chass.css
+++ b/src/components/chass.css
@@ -1,7 +1,22 @@
+.container
+{
+    
+    color: black;
+    height:100px;
+    font-size:50px;
+    text-align: center;
+    
+}
+
+
 .outer{
     height: 800px;
     width: 800px;
-    border: 2px solid red;
+    border: 2px solid red;  
+    display: center;
+    justify-content: center;
+    margin-left: 500px;
+  
 }
 
 .row
